--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "astro-printek",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,12 +9,26 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.9.2"
+    "astro": "^5.9.2",
+    "resend": "^6.0.3"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.1"
-  }
+  },
+  "description": "```sh npm create astro@latest -- --template minimal ```",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danielpemor/AstroPrintek.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/danielpemor/AstroPrintek/issues"
+  },
+  "homepage": "https://github.com/danielpemor/AstroPrintek#readme"
 }
